--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
             <input type="checkbox">
             <span class="slider round"></span>
         </label>
-        <em>Modo Oscuro</em>
+        <em>Modo oscuro</em>
     </div>
-
     <div>
         <h1>Ryan R Rothwell</h1>
         <p>ryan.r.rothwell@gmail.com | <a href="https://linkedin.com/in/ryanrothwell" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
